# Cook-Book

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  pyproject.toml  server-entrypoint.sh
config_data/: config.py  dirs.py
cook_book/: admin.py  apps.py  models.py  urls.py  views.py
cook_book/management/commands/: createsuperuser-ifnotexists.py
cook_book/migrations/: 0001_initial.py
cook_book/templates/cook_book/: index.html
project/: settings.py  urls.py
